src/main/java/org/example/nanobananaprobot/errors/SearchException.java
package org.example.nanobananaprobot.errors;

public class SearchException extends Exception {
    public SearchException(String message) {
        super(message);
    }
}





